--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plant Journal</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png?v=dsfsfgswwfsf">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png?v=dsfsfgswwfsf">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png?v=dsfsfgswwfsf">
+    <link rel="manifest" href="/icons/site.webmanifest?v=dsfsfgswwfsf">
+    <link rel="mask-icon" href="/icons/safari-pinned-tab.svg?v=dsfsfgswwfsf" color="#4d894d">
+    <link rel="shortcut icon" href="/icons/favicon.ico?v=dsfsfgswwfsf">
+    <meta name="msapplication-TileColor" content="#00a300">
+    <meta name="theme-color" content="#4d894d">
+
   </head>
   <body>
     <div id="app"></div>
