--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plant Journal</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png?v=dsfsfgswwfsf">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png?v=dsfsfgswwfsf">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png?v=dsfsfgswwfsf">
-    <link rel="manifest" href="/icons/site.webmanifest?v=dsfsfgswwfsf">
-    <link rel="mask-icon" href="/icons/safari-pinned-tab.svg?v=dsfsfgswwfsf" color="#4d894d">
-    <link rel="shortcut icon" href="/icons/favicon.ico?v=dsfsfgswwfsf">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png?v=yuiurfhgds">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png?v=yuiurfhgds">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png?v=yuiurfhgds">
+    <link rel="manifest" href="/cons/site.webmanifest?v=yuiurfhgds">
+    <link rel="mask-icon" href="/icons/safari-pinned-tab.svg?v=yuiurfhgds" color="#5bbad5">
+    <link rel="shortcut icon" href="/icons/favicon.ico?v=yuiurfhgds">
     <meta name="msapplication-TileColor" content="#00a300">
     <meta name="theme-color" content="#4d894d">
 
