move site manifest

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png?v=yuiurfhgds">
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png?v=yuiurfhgds">
     <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png?v=yuiurfhgds">
-    <link rel="manifest" href="/cons/site.webmanifest?v=yuiurfhgds">
+    <link rel="manifest" href="/site.webmanifest?v=yuiurfhttt">
     <link rel="mask-icon" href="/icons/safari-pinned-tab.svg?v=yuiurfhgds" color="#5bbad5">
     <link rel="shortcut icon" href="/icons/favicon.ico?v=yuiurfhgds">
     <meta name="msapplication-TileColor" content="#00a300">
