--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <title>Plant Journal</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png?v=yuiurfhgds">
